--- a/css/styles.css
+++ b/css/styles.css
@@ -129,210 +129,218 @@ section{
 
 
 
-
-/* Container 1 */
+  /* Container 1 */
 
 .flex-container1 {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    height: 90px;
-    
-
-    
-  }
-
-
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  height: 90px;
   
 
+  
+}
+
+
+
+
 #logo{
-    height: 50px;
-    width: 60px;
+  height: 50px;
+  width: 60px;
 
 }
 
 
 
 #navegador{
-    
-    display: inline-block;
-    padding: 15px;
-    width: 900px;
-    text-align: center;
-    
-    
+  
+  display: inline-block;
+  padding: 15px;
+  width: 900px;
+  text-align: center;
+  
+  
 }
 
 nav ul li {
-    display: inline-block;
-    margin-right: 20px;
-    
+  display: inline-block;
+  margin-right: 20px;
+  
 }
 
 #btncontacto {
-    
-    
-    background-color: #4CAF50;
-    color: white;
-    border: none;
-    cursor: pointer;
-    border-radius: 10px;
-    padding: 10px 30px;
-    font-weight: bold;
-   
+  
+  
+  background-color: #4CAF50;
+  color: white;
+  border: none;
+  cursor: pointer;
+  border-radius: 10px;
+  padding: 10px 30px;
+  font-weight: bold;
+ 
 
-  }
+}
 
 /* Container 2 */
 
 #flex-container2{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    min-height: 100vh;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  min-height: 100vh;
 
 
 
-  }
+}
 
 
 
 #fotoprincipal{
-    border-radius: 50%;
-    margin-top: 120px;
-    max-width: 400px;
-    
-    
-    
+  border-radius: 50%;
+  margin-top: 120px;
+  max-width: 400px;
+  
+  
+  
 }
 
 #textobio{
-    width: 600px;
-    margin-top: 120px;
+  width: 600px;
+  margin-top: 120px;
 
 }
 
 
 
 #btncv{
-    background-color: #db6600;
-    border-radius: 30px 30px 30px 30px;
-    height: 50px;
-    width: 200px;
-    color: #fbfbfb;
-    font-size: 20px;
-    
-    
+  background-color: #db6600;
+  border-radius: 30px 30px 30px 30px;
+  height: 50px;
+  width: 200px;
+  color: #fbfbfb;
+  font-size: 20px;
+  
+  
+}
+#btncv:hover {
+  background-color: #3e8e41;
 }
 
 /* container 3 */
 
 #flex-container3{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    height: 400px;
-    padding-top: 90px;
-    
-    
-    
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  height: 400px;
+  padding-top: 90px;
+  
+  
+  
 
 
-  }
+}
 
 
 
 
 .tarjeta {
-    display: flex;
-  align-items: center;
-  justify-content: center;
+  display: flex;
+align-items: center;
+justify-content: center;
 }
 
 .tarjeta img {
-    
-    width: 200px;
-    height: 200px;
-    transition: transform 0.3s;
-    margin-right: 70px;
-    
-  }
   
-  .tarjeta img:hover {
-    transform: scale(1.2);
-    cursor: pointer;
-  }
+  width: 100px;
+  height: 100px;
+  transition: transform 0.3s;
+  margin-right: 70px;
+  
+}
 
-  
-  /* container 4 */
+.tarjeta img:hover {
+  transform: scale(1.2);
+  cursor: pointer;
+}
+
+
+/* container 4 */
 
 
 
 
 
 #marca{
-    font-family: 'Marck Script', cursive;
+  font-family: 'Marck Script', cursive;
 
 
 }
 
 #flex-container4 {
-    display: flex;
-    justify-content: center;
-    flex-direction: row;
-    background-color: #db6600;
-    border-radius: 30px;
-    height: 450px;
-    margin-top: 90px;
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  background-color: #db6600;
+  border-radius: 30px;
+  height: 450px;
+  margin-top: 90px;
 
 
-  }
+}
+
+.card {
+  width: 300px;
   
-  .card {
-    width: 300px;
-    
-    padding: 10px;
-    margin: 10px;
-  }
-  
-  .card h2 {
-    margin-top: 0;
-  }
-  
-  .card img {
-    width: 100%;
-    height: auto;
-    cursor: pointer;
-  }
-  
+  padding: 10px;
+  margin: 10px;
+}
+
+.card h2 {
+  margin-top: 0;
+}
+
+.card img {
+  width: 100%;
+  height: auto;
+  cursor: pointer;
+}
+
 /* Container 5 */
 
-  #flex-container5 {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    height: 300px;
-    background-color: #e9dec4;
-    
-    
-    
+#flex-container5 {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  height: 300px;
+  background-color: #e9dec4;
+  
+  
+  
 
-    
-  }
+  
+}
 
-  .flex-containerfooter{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    height: 90px;
-    background-color: #4CAF50;
-    
-  }
+.flex-containerfooter{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  height: 90px;
+  background-color: #4CAF50;
+  
+}
 
-  @media(max-width:700px){
+
+
+
+
+
+
+  @media(max-width:767px){
 
 
     #flex-container1 {
@@ -418,6 +426,34 @@ nav ul li {
       height: auto;
     }
   }
+
+
+  @media (min-width:768px){
+
+    #flex-container3{
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      height: auto;
+      
+      
+      
+    }
+
+    #flex-container4{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      height: auto;
+      
+      
+      
+  
+    }
+
+
+
+}
 
 
   
